--- a/package.json
+++ b/package.json
@@ -1,43 +1,49 @@
 {
-  "name": "cmd-index",
+  "name": "cmd-lindex",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9",
     "core-js": "^3.8.1",
-    "vue": "^3.0.4"
+    "postcss": "^7",
+    "register-service-worker": "^1.7.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "vue": "^3.0.4",
+    "vue-class-component": "^8.0.0-0",
+    "vue-router": "^4.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/eslint-parser": "^7.12.1",
+    "@types/jest": "^26.0.19",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "@vue/cli-plugin-babel": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-e2e-cypress": "~5.0.0-alpha.3",
     "@vue/cli-plugin-eslint": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-pwa": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-router": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-typescript": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-unit-jest": "~5.0.0-alpha.3",
     "@vue/cli-service": "~5.0.0-alpha.3",
     "@vue/compiler-sfc": "^3.0.4",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/test-utils": "^2.0.0-0",
     "eslint": "^7.15.0",
-    "eslint-plugin-vue": "^7.2.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-vue": "^7.2.0",
+    "prettier": "^2.2.1",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "typescript": "~4.1.2",
+    "vue-cli-plugin-tailwind": "~2.0.5",
+    "vue-jest": "^5.0.0-0"
+  }
 }
