--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
     "core-js": "^3.8.1",
+    "dexie": "^3.0.3",
     "http-server": "^0.12.3",
+    "inversify": "^5.0.5",
     "postcss": "^7",
+    "reflect-metadata": "^0.1.13",
     "register-service-worker": "^1.7.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.0.4",
