--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^7.15.0",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-vue": "^7.2.0",
+    "fake-indexeddb": "^3.1.2",
     "prettier": "^2.2.1",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
